--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'android-apt'
 android {
     compileSdkVersion 25
     buildToolsVersion '25.0.2'
+    useLibrary 'org.apache.http.legacy'
     defaultConfig {
         applicationId "com.example.q.pocketmusic"
         minSdkVersion 16
@@ -24,21 +25,19 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile files('libs/BmobSDK_3.5.5_20170420.jar')
+    compile 'cn.bmob.android:bmob-sdk:3.5.5'
+    compile 'cn.bmob.android:http-legacy:1.0'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.jakewharton:butterknife:8.4.0'
-    compile 'com.jude:easyrecyclerview:4.3.7'
+    compile 'com.jude:easyrecyclerview:4.4.0'
     compile 'org.jsoup:jsoup:1.9.2'
-    compile 'com.squareup.okhttp3:okhttp:3.5.0'
     compile 'com.google.android.gms:play-services-appindexing:9.8.0'
     compile 'com.j256.ormlite:ormlite-android:5.0'
     compile 'com.github.chrisbanes:PhotoView:1.3.0'
     compile 'com.github.jinatonic.confetti:confetti:1.0.0'
     compile 'cn.finalteam:galleryfinal:1.4.8.7'
     compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'io.reactivex:rxandroid:1.2.1'
-    compile 'io.reactivex:rxjava:1.1.6'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.zcw:togglebutton-library:1.0.0'
     compile 'com.jude:rollviewpager:1.4.5'
@@ -48,7 +47,6 @@ dependencies {
     compile 'com.wang.avi:library:2.1.3'
     compile 'com.github.rubensousa:bottomsheetbuilder:1.5.1'
     compile 'pub.devrel:easypermissions:0.3.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.github.clans:fab:1.6.4'
     testCompile 'junit:junit:4.12'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
