--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.example.q.pocketmusic"
         minSdkVersion 16
         targetSdkVersion 25
-        versionCode 27
-        versionName "5.0 Beta"
+        versionCode 28
+        versionName "5.0 stable"
         vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
