--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.example.q.pocketmusic"
         minSdkVersion 16
         targetSdkVersion 25
-        versionCode 28
-        versionName "5.0 stable"
+        versionCode 29
+        versionName "5.1"
         vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
@@ -25,7 +25,7 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile files('libs/qqdriver_android.jar')
+    compile files('libs/BmobPay_v3.2.0_170602.jar')
     compile 'cn.bmob.android:bmob-sdk:3.5.5'
     compile 'cn.bmob.android:http-legacy:1.0'
     compile 'com.android.support:appcompat-v7:25.3.1'
@@ -43,7 +43,6 @@ dependencies {
     compile 'com.jude:rollviewpager:1.4.5'
     compile 'com.zhy:flowlayout-lib:1.0.3'
     compile 'jp.wasabeef:glide-transformations:2.0.1'
-    compile 'com.allenliu.badgeview:library:1.0.6'
     compile 'com.wang.avi:library:2.1.3'
     compile 'com.github.rubensousa:bottomsheetbuilder:1.5.1'
     compile 'pub.devrel:easypermissions:0.3.0'
