--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.example.q.pocketmusic"
         minSdkVersion 16
         targetSdkVersion 25
-        versionCode 32
-        versionName "5.4"
+        versionCode 34
+        versionName "5.4 fix_2"
         vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
