--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,7 +50,7 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".module.song.SongActivity"
-            android:screenOrientation="portrait" />
+            android:configChanges="keyboardHidden|orientation|screenSize" />
 
         <meta-data
             android:name="com.google.android.gms.version"
@@ -75,7 +75,7 @@
             android:name=".module.user.notify.suggestion.SuggestionActivity"
             android:windowSoftInputMode="adjustUnspecified|stateHidden" />
         <activity android:name=".module.home.profile.setting.SettingActivity" />
-        <activity android:name=".module.home.profile.collection.CollectionActivity" />
+        <activity android:name=".module.home.profile.collection.UserCollectionActivity" />
         <activity android:name=".module.user.notify.help.HelpActivity">
             <intent-filter>
                 <action android:name="help_activity" />
@@ -96,7 +96,6 @@
         <activity
             android:name=".module.piano.PianoActivity"
             android:screenOrientation="landscape" />
-        <activity android:name=".module.home.net.acg.BannerActivity" />
         <activity android:name=".module.home.profile.post.UserPostActivity" />
         <activity android:name=".module.home.profile.share.UserShareActivity" />
         <activity android:name=".module.user.notify.UserNotifyActivity" />
@@ -110,9 +109,10 @@
             android:name=".module.home.profile.support.SupportActivity"
             android:screenOrientation="portrait" />
         <activity android:name=".module.user.notify.version.PreviewVersionActivity" />
-        <activity android:name=".module.home.net.acg.ACGActivity" />
+        <activity android:name=".module.home.net.special.SpecialColumnActivity" />
         <activity android:name=".module.user.other.OtherProfileActivity" />
-        <activity android:name=".module.home.net.type.study.StudyActivity"></activity>
+        <activity android:name=".module.home.net.type.study.StudyActivity" />
+        <activity android:name=".module.home.net.special.list.SpecialListActivity"></activity>
     </application>
 
 </manifest>
