--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,9 +12,23 @@ android {
         versionName "5.8"
         vectorDrawables.useSupportLibrary = true
     }
+    signingConfigs {
+        myConfig {
+            storeFile file("E:\\Application\\PocketMusic-master\\app\\key.jks")
+            storePassword 'lol520152'
+            keyAlias 'Cloud'
+            keyPassword 'hahaha233'
+        }
+    }
     buildTypes {
-        release {
+        debug {
+            signingConfig signingConfigs.myConfig
             minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+        release {
+            signingConfig signingConfigs.myConfig
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -40,15 +54,13 @@ dependencies {
     compile 'com.github.jinatonic.confetti:confetti:1.0.0'
     compile 'cn.finalteam:galleryfinal:1.4.8.7'
     compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'com.zcw:togglebutton-library:1.0.0'
     compile 'com.jude:rollviewpager:1.4.5'
-    compile 'com.zhy:flowlayout-lib:1.0.3'
     compile 'jp.wasabeef:glide-transformations:2.0.1'
     compile 'com.wang.avi:library:2.1.3'
     compile 'com.github.rubensousa:bottomsheetbuilder:1.5.1'
     compile 'pub.devrel:easypermissions:0.3.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:cardview-v7:25.3.1'
     testCompile 'junit:junit:4.12'
     apt 'com.jakewharton:butterknife-compiler:8.5.1'
+    compile 'com.google.android:flexbox:0.3.0'
 }
