--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,8 +71,12 @@
         <activity
             android:name=".module.home.profile.user.login.LoginActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".module.home.profile.user.register.RegisterActivity"  android:screenOrientation="portrait"/>
-        <activity android:name=".module.home.net.type.community.ask.publish.PublishAskActivity"  android:screenOrientation="portrait"/>
+        <activity
+            android:name=".module.home.profile.user.register.RegisterActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".module.home.net.type.community.ask.publish.PublishAskActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".module.home.net.type.community.ask.comment.AskSongCommentActivity"
             android:screenOrientation="portrait"
@@ -104,9 +108,6 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustUnspecified|stateHidden" />
         <activity
-            android:name=".module.home.profile.user.forget.ForgetActivity"
-            android:screenOrientation="portrait" />
-        <activity
             android:name=".module.home.profile.post.UserPostActivity"
             android:screenOrientation="portrait" />
         <activity
@@ -121,10 +122,18 @@
         <activity
             android:name=".module.home.profile.support.SupportActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".module.home.profile.user.other.OtherProfileActivity"  android:screenOrientation="portrait"/>
-        <activity android:name=".module.home.net.type.study.StudyActivity"  android:screenOrientation="portrait"/>
-        <activity android:name=".module.home.profile.gift.GiftActivity" android:screenOrientation="portrait" />
-        <activity android:name=".module.home.profile.interest.UserInterestActivity"  android:screenOrientation="portrait"/>
+        <activity
+            android:name=".module.home.profile.user.other.OtherProfileActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".module.home.net.type.study.StudyActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".module.home.profile.gift.GiftActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".module.home.profile.interest.UserInterestActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
