--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,14 @@
 apply plugin: 'com.android.application'
-apply plugin: 'android-apt'
 android {
     compileSdkVersion 25
-    buildToolsVersion '25.0.3'
+    buildToolsVersion '26.0.3'
     useLibrary 'org.apache.http.legacy'
     defaultConfig {
         applicationId "com.example.q.pocketmusic"
         minSdkVersion 18
         targetSdkVersion 25
-        versionCode 41
-        versionName "6.2 alpha"
+        versionCode 42
+        versionName "6.2"
         vectorDrawables.useSupportLibrary = true
     }
     signingConfigs {
@@ -40,13 +39,12 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile files('libs/okhttp-3.8.1.jar')
-    compile 'cn.bmob.android:bmob-sdk:3.5.6'
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:design:25.3.1'
+    compile 'cn.bmob.android:bmob-sdk:3.5.7'
+    compile 'com.android.support:appcompat-v7:25.4.0'
+    compile 'com.android.support:design:25.4.0'
     compile 'com.jakewharton:butterknife:8.5.1'
     compile 'com.jude:easyrecyclerview:4.4.2'
     compile 'org.jsoup:jsoup:1.9.2'
-    compile 'com.google.android.gms:play-services-appindexing:9.8.0'
     compile 'com.j256.ormlite:ormlite-android:5.0'
     compile 'com.github.chrisbanes:PhotoView:1.3.0'
     compile 'com.github.jinatonic.confetti:confetti:1.0.0'
@@ -56,9 +54,9 @@ dependencies {
     compile 'jp.wasabeef:glide-transformations:2.0.1'
     compile 'com.wang.avi:library:2.1.3'
     compile 'pub.devrel:easypermissions:0.3.0'
-    compile 'com.android.support:cardview-v7:25.3.1'
+    compile 'com.android.support:cardview-v7:25.4.0'
     compile 'com.google.android:flexbox:0.3.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
-    apt 'com.jakewharton:butterknife-compiler:8.5.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 }
