--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.0.0'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -15,6 +15,7 @@ allprojects {
         jcenter()
         maven { url "https://jitpack.io" }
         mavenCentral()  // GPUImage for Android
+        google()
         maven { url "https://raw.github.com/bmob/bmob-android-sdk/master" }//Bmob
     }
 }
