--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.application'
 android {
-    compileSdkVersion 25
-    buildToolsVersion '26.0.3'
+    compileSdkVersion 26
     useLibrary 'org.apache.http.legacy'
     defaultConfig {
         applicationId "com.example.q.pocketmusic"
         minSdkVersion 18
-        targetSdkVersion 25
-        versionCode 49
-        versionName "6.9"
+        targetSdkVersion 26
+        versionCode 50
+        versionName "7.0"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
     signingConfigs {
@@ -36,33 +36,61 @@ android {
     }
 }
 
+repositories {
+    flatDir {
+        dirs 'libs' //this way we can find the .aar file in libs folder
+    }
+}
+
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile files('libs/okhttp-3.8.1.jar')
-    compile ('cn.bmob.android:bmob-sdk:3.5.9'){
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'com.android.support.test:runner:1.0.1'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.2.2'
+    //兼容库
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    //Design
+    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.android.support:cardview-v7:26.1.0'
+    //FleXbox
+    implementation 'com.google.android:flexbox:0.3.0'
+    //EasyRecyclerView
+    implementation 'com.jude:easyrecyclerview:4.4.2'
+    // OKhttp
+    implementation files('libs/okhttp-3.8.1.jar')
+    //Bmob
+    api ('cn.bmob.android:bmob-sdk:3.5.9'){
         exclude group :'io.reactivex.rxandroid'
         exclude group :'io.reactivex.rxjava'
     }
-    compile 'com.android.support:appcompat-v7:25.4.0'
-    compile 'com.android.support:design:25.4.0'
-    compile 'com.jakewharton:butterknife:8.5.1'
-    compile 'com.jude:easyrecyclerview:4.4.2'
-    compile 'org.jsoup:jsoup:1.9.2'
-    compile 'com.j256.ormlite:ormlite-android:5.0'
-    compile 'com.github.chrisbanes:PhotoView:1.3.0'
-    compile 'com.github.jinatonic.confetti:confetti:1.0.0'
-    compile 'cn.finalteam:galleryfinal:1.4.8.7'
-    compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'com.jude:rollviewpager:1.4.5'
-    compile 'jp.wasabeef:glide-transformations:2.0.1'
-    compile 'com.wang.avi:library:2.1.3'
-    compile 'pub.devrel:easypermissions:0.3.0'
-    compile 'com.android.support:cardview-v7:25.4.0'
-    compile 'com.google.android:flexbox:0.3.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    testCompile 'junit:junit:4.12'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
-    compile 'org.greenrobot:eventbus:3.1.1'
-    compile 'io.reactivex.rxjava2:rxjava:2.1.8'
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    //Jsoup
+    implementation 'org.jsoup:jsoup:1.9.2'
+    //ButterKnife
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    //OrmLite
+    implementation 'com.j256.ormlite:ormlite-android:5.0'
+    //PhotoView
+    implementation 'com.github.chrisbanes:PhotoView:1.3.0'
+    //Confetti
+    implementation 'com.github.jinatonic.confetti:confetti:1.0.0'
+    //GalleryFinal
+    implementation 'cn.finalteam:galleryfinal:1.4.8.7'
+    //Gilde
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'jp.wasabeef:glide-transformations:2.0.1'
+    //RollViewPager
+    implementation 'com.jude:rollviewpager:1.4.5'
+    //loading
+    implementation 'com.wang.avi:library:2.1.3'
+    //EasyPermissions
+    implementation 'pub.devrel:easypermissions:1.0.1'
+    //Constraint
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+    //EventBus
+    implementation 'org.greenrobot:eventbus:3.1.1'
+    //RxJava
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.10'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    implementation(name:'tools', ext:'aar')
 }
