--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
     <application
         android:name=".config.MyApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ico_launcher"
+        android:icon="@mipmap/ic_launcher"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -112,7 +113,7 @@
             android:screenOrientation="portrait" />
 
         <service
-            android:name=".util.common.update.DownloadService"
+            android:name=".util.common.update.UpdateService"
             android:enabled="true"
             android:exported="true" />
 
@@ -131,7 +132,7 @@
         <activity
             android:name=".module.home.profile.interest.UserInterestActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".module.home.profile.support.DimensionActivity"></activity>
+        <activity android:name=".module.home.profile.support.DimensionActivity"/>
     </application>
 
 </manifest>
