--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,8 @@
         android:name=".config.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <provider
@@ -56,9 +56,8 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".module.song.SongActivity"
-            android:screenOrientation="portrait"
-            android:configChanges="keyboardHidden|orientation|screenSize" />
-
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:screenOrientation="portrait" />
 
         <service android:name=".service.music.MediaPlayerService" />
 
@@ -132,7 +131,11 @@
         <activity
             android:name=".module.home.profile.interest.UserInterestActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".module.home.profile.support.DimensionActivity"/>
+        <activity android:name=".module.home.profile.support.DimensionActivity" />
+
+        <service
+            android:name=".util.common.update.UpdateIntentService"
+            android:exported="false"></service>
     </application>
 
 </manifest>
