--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,19 +1,18 @@
 apply plugin: 'com.android.application'
 android {
-    compileSdkVersion 26
+    compileSdkVersion 28
     useLibrary 'org.apache.http.legacy'
     defaultConfig {
         applicationId "com.example.q.pocketmusic"
         minSdkVersion 18
-        targetSdkVersion 26
+        targetSdkVersion 28
         versionCode 52
         versionName "7.2"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
     signingConfigs {
         myConfig {
-            storeFile file("E:\\Application\\PocketMusic-master\\app\\key.jks")
+            storeFile file("D:\\key.jks")
             storePassword 'lol520152'
             keyAlias 'Cloud'
             keyPassword 'hahaha233'
@@ -45,13 +44,10 @@ repositories {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.2.2'
     //兼容库
-    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'androidx.appcompat:appcompat:1.0.2'
     //Design
-    implementation 'com.android.support:design:26.1.0'
-    implementation 'com.android.support:cardview-v7:26.1.0'
+    implementation 'com.google.android.material:material:1.0.0'
     //FleXbox
     implementation 'com.google.android:flexbox:0.3.0'
     //EasyRecyclerView
@@ -66,8 +62,8 @@ dependencies {
     //Jsoup
     implementation 'org.jsoup:jsoup:1.9.2'
     //ButterKnife
-    implementation 'com.jakewharton:butterknife:8.8.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    implementation 'com.jakewharton:butterknife:10.1.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
     //OrmLite
     implementation 'com.j256.ormlite:ormlite-android:5.0'
     //PhotoView
@@ -86,7 +82,7 @@ dependencies {
     //EasyPermissions
     implementation 'pub.devrel:easypermissions:1.0.1'
     //Constraint
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     //EventBus
     implementation 'org.greenrobot:eventbus:3.1.1'
     //RxJava
